# ChangeLog for dev-perl/Linux-DesktopFiles
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Linux-DesktopFiles/ChangeLog,v 1.9 2014/11/25 23:25:21 hasufell Exp $

  25 Nov 2014; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  drop maintainership

  19 Oct 2014; Mikle Kolyada <zlogene@gentoo.org>
  -Linux-DesktopFiles-0.60.0.ebuild:
  Drop old.

  08 Sep 2014; Chema Alonso <nimiux@gentoo.org>
  Linux-DesktopFiles-0.80.0.ebuild:
  Stable for amd64 wrt bug #518186

  14 Aug 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Linux-DesktopFiles-0.80.0.ebuild:
  x86 stable wrt bug #518186

*Linux-DesktopFiles-0.80.0 (02 Nov 2013)

  02 Nov 2013; Julian Ospald <hasufell@gentoo.org>
  +Linux-DesktopFiles-0.80.0.ebuild:
  version bump wrt #490076

  27 Aug 2012; Johannes Huber <johu@gentoo.org>
  Linux-DesktopFiles-0.60.0.ebuild:
  Stable for x86, wrt bug #432744

  26 Aug 2012; Agostino Sarubbo <ago@gentoo.org>
  Linux-DesktopFiles-0.60.0.ebuild:
  Stable for amd64, wrt bug #432744

*Linux-DesktopFiles-0.60.0 (26 Jul 2012)

  26 Jul 2012; Julian Ospald <hasufell@gentoo.org>
  -Linux-DesktopFiles-0.06.ebuild, +Linux-DesktopFiles-0.60.0.ebuild:
  convert to normalized version, fix LICENSE, fix RDEPEND

*Linux-DesktopFiles-0.06 (26 Jul 2012)

  26 Jul 2012; Julian Ospald <hasufell@gentoo.org>
  +Linux-DesktopFiles-0.06.ebuild, +metadata.xml:
  initial import