@@ -2,25 +2,15 @@
 Hash: SHA256
 
 DIST Linux-DesktopFiles-0.08.tar.gz 10418 SHA256 12fe3a41bb66087629e4cc1f65e7ee3a65591d1ce51039f937d0704eeae2c09a SHA512 76e66b4dde39e9b59399362ea83368806206af74077b59f167a0344ed84262240b7120928b8cb46418f1de0bfaeaca6dc4b968b34bdedb40cbc29f9a61497eda WHIRLPOOL ddbf57f7d346a2ac89de08a3ade811820f3202c785c4093921a94cf28dc02f447a7e05bac5acacc5b632e56ff59e8cd003f1736eaf37fd677d1f6e815cd69211
+DIST Linux-DesktopFiles-0.09.tar.gz 10268 SHA256 45afb52301ed1553fa741c40e62dc91280bb0e6e58dad83e6a49415a02f0973b SHA512 9c46ca6be9c21092481efa6e101aaaa162c54e9c02156ac38f62363ddad937b9341a2b66fb09331347c45e1a8b9eba9dbcb2a7b0f45da41237a896b4dd31bb78 WHIRLPOOL 521976d1e340b381d352f41f159bfa8161cba22bed3fa8f1f756db1e2782a1c0b2769a4913d31fc602179579b7b81cc55d6366da5e08182b37364839c62aa053
 EBUILD Linux-DesktopFiles-0.80.0.ebuild 556 SHA256 16b87f00900ecdf569a0a46a9b4efb719415f4c1343b04ce10e697a0b4915c1b SHA512 8a6202bb5a3aac7beb27816f835f04c366b46d7545ee864026c99ab5f119d2246703d0ebf3d0b98a3a82ab8d1cbe5d1f5b8e4a2e542e675dac86c51b78c52165 WHIRLPOOL 350c68cc14e27d21d7993cec490b6cae290fa394dd750a400bba6adf8563098a6c887fa358bc16711589c8f2be077bfcdd15cc1234c7fb0aa42a7c20ef5b12a5
-MISC ChangeLog 1437 SHA256 543c85e2b04cf41ba96cd24d49d085e0b98f7108d43d1809f782f8b0c9c86c66 SHA512 fd88f17cb55245857ba928636f61640eb3bf079b1aa357cdef35678c54a536f03f6324accb9a4656a36b1ba0d14e685c65d492f4653fb3977fa7f0fac003b0bb WHIRLPOOL 045a43ff14199b13ba5fd023dc81939560ded19719ef1dfae6c92f1807c7d89ed8e319d27e9a4f2ae4b9996ebcb53a68b477b609e2ac9fb02be9255acefdc46b
+EBUILD Linux-DesktopFiles-0.90.0.ebuild 547 SHA256 a37c80bb158040ad2b686b492d4e2aecdce93f599ee15ec18e0ed345993b2ede SHA512 b1312a4c36839baf689848f21466374305e48c6a9cdb381815ab947303c6fb36489c9c21d66ad0d0bdd441f1ae634c5a2d04e7f6e24240d9be8ed2cacd7d51f0 WHIRLPOOL 5855dd23d2a616c4f43c488974e4e5024ee00407a3b84c30286e390bb893f866a6a18ce23a3a732b34c6fb14944820d2240ce93512edc52a30c2f01e87fb52ef
+MISC ChangeLog 1606 SHA256 a24d9b7bdee665a88237ee6bda5e2d10156cc70f9f8a752bb9b22e9993adc195 SHA512 0459968f8132eda90cd47fd6e335f596be44c767d1917e5e0a538f55f8599aa70bbcb1214cd2563ed6b71aa5f1e524106a40c1014505fc28606ec5894a784b32 WHIRLPOOL 73219747aafd72e12edcc7d859c7c02140d46a91e11d0109b450ae92bf7c1ad0b1ba0788c460a2c08763b60b7b15d911087f59b46f2a2a98a71e2127465dc1d6
 MISC metadata.xml 159 SHA256 c525a1ef678c773d0e7c61852468feb4f1ee5c36b170b123cc526ff242894020 SHA512 d3bf2f70fb7a002fd942b92720c8bf87819f030265c927c771266504e4d9013498c591c1484394720d00ed36a5ecfd11104e13b6cbd355860feec8609e6f23ee WHIRLPOOL 254f933d6227d77eebd8921c0c54c3dd59ad81cbefd99916929a647a7ed44fae19ec8a51f394fa5ba098fcd4ddaf7ecf359e5cd341f0f7f39b3a615bf8ff99e8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUdQ/iXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAg6zgQANbugHBDDOMH/BpRpnzqGA0D
-tPPQPbroC7Pp/V5bsnn8wG/o6tRUttWaqrIcdcDpXCxKkSlILmQI+h/00Ra+f1xb
-zEIKgo880Z9V4rWp/nSZzPoCup1h/5LZ6ele49Von74IJpK2aL4TVXubblOhtA14
-1ZDF/5iT3blZnnRQ5otWRCQdEE8z+ENZwLr+GVYFfMzw4EdrvmUPgjHdnXXaM5ox
-2zkm/BsWmVahUbkneOyLrfIKhBwCIxtHB88h7VeBIcBJX5AXIVCaEPeyHALQyldg
-gOhNt4IIO5o7sHyf9lq2+COszSs2mOeTawSeZz4hULsjeFJCC12jynrQtr1NA8XE
-Oay+1AAZGQH+RfqZ8Dy/gCZ57pzxlB/x9CrvBnU4SRmgT/Vz8XlIzjfH63YtJPZP
-9ZaZgXmtEmimJzIBP+0viUdmF76Iqxy8EjLOpWms0wGeZXpcxm5GLnWZgga9XfJC
-/l5DB/w3ZOtfNi85rTMmnb3jmkzpg9+pXeEkTgnj2vQ0UOfrnalgQ98o3LNgJ9gy
-LrmAx9lPZuGDGceZCz1auN7RIyLngK0Ibp31F3fNJwvSbgo6NNh9eZOyF63S7fEy
-PiKhCLsmtLQwQ6Ul5nuRwuJgF0HTOqnjizZKCY7/7jVOXLFU+xNPTiZgxtRwq4y0
-qluqOpfIKWSMcfqkgJT/
-=6ieX
+iEYEAREIAAYFAlTphboACgkQVWmRsqeSphOXjQCeNukLGJHl/7mGCY8fo52DJQLR
+2xwAnAy7xgjOD6gNPM15piMEAwm7KED+
+=xacR
 -----END PGP SIGNATURE-----
