@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST xesam-tools-0.7.0.tar.gz 73173 SHA256 b73264bd392e3031c54cc112bd6d6780d78d9d20150954653415a25c9ab6ff96 SHA512 3428e18eb52fa205bca872c8b0b1f12f01f58a8fb43239bc2cc78fe52f9903940702dae4116d4775340b69ec949ad2198b57c0c1246fe58dd8ed8b7a6562bf71 WHIRLPOOL d2645d395ceafdcaf852ed287d5c472d5d666e461d1f35ebb289ee91f60aaae50e2b468d37ec5e815a2abd0a25c5b250be42f2da2bb213d15f7b29dfecd72868
-EBUILD xesam-tools-0.7.0.ebuild 943 SHA256 395e3cf510bba6199456559de675d92d106fca732b053d18141124afe2ebc013 SHA512 f28fe551ead3ed217e122d9886ed2a8e9214ded5332d323bc0f40ea5ae44eb6fcbf041eae52cfe7e7bd8c3b4866864eef50157db844ff3385e35602fee9d98de WHIRLPOOL 2b5936bc32a20924cc027db7f54d9b98b3fec66881aefb38fbfc6884dedcd646876dfb5a73e640da5c61d43d8568b78865d694442e55d790ea11c1dd5198e1c2
-MISC ChangeLog 1195 SHA256 b8988e23c04689228683125b38c26eb4183043696c93d7ea7de79d026be58c16 SHA512 be24221130b1387b6618ada73fc13de288a356df3248c5999a250ea867df92b88804b25c518decc205add0576da265c88871a997d856660f6d921c430127935a WHIRLPOOL c81d5fec04afc51dc7d302e4ae1fbdab9cda89e9981decc36d5587b3dc403553ba4fcb6feb5e0284f4bc9f014e5c7b762f101322a42227d5bd826db96f4d3b1e
+EBUILD xesam-tools-0.7.0-r1.ebuild 1006 SHA256 a919ed72f39191d0b40d9cc7d5892b4548322e1f91af7cfce0f0935bab511e59 SHA512 91704f59381598e1fdc6df8b75bbfbd010cbdbaff4be4c5e371eb68bb7c36fd50e7dd84bdb5245b42c7e5bf942cdd63520f21f3c3992ae45b7ec193f0cc976af WHIRLPOOL 1987f3df3e809b6dd0025062aa1a3454835fccd3fa385aa2c1f3034f42ce8ac62a7c49f47697509910a2851766ebcecd83f7002f1429df0a921f8acbdf334149
+MISC ChangeLog 1404 SHA256 20690174117314683644e627353a8806022d7983e3570e87573759689f753066 SHA512 fbe8ad6bb5b8a54dcc3a4ce50e401b2058ffe21b48f94cd861568014f8af6304364911adfe9b88579365cdebeb9237a51a91cd05af545be001f5962e748b7bc8 WHIRLPOOL 746f5500192673bdc011d607ff73fb42ccc3d918798530f425955042576a66e31ec6c798e184367537f36c4921d8ddcbca8d5f43877ad6859f2eac06d1f7370f
 MISC metadata.xml 442 SHA256 9453496d09c8465b1f102c4c7ea51da95d20d468aafb9a47877626eeb14dba2d SHA512 4b03cd8f5a9493d8788d41b5eefeeca719c6cd94bb4af1fbc848750f96be8c187387eec17bc6f608b34bd2a86518f2a9b50a8e05abb43d70d34414029ef4abc4 WHIRLPOOL 722974683f29a3c61efd698350dc607d81319cdff454645b59dc545d6e206d5a2750f0ff90ab638b63cf821997a99b51598ef50e30fedb458ee8dad251cfe397
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlERTkcACgkQCaWpQKGI+9QpNQCeJqjjGrRMkSYvJdJ8UXhAHBFV
-BS8An1LdqHkfHLNF/ERgrn7dF/P/2JOY
-=5DAq
+iEYEAREIAAYFAlTpfrsACgkQso7CE7gHKw1PJgCghHZ8dDmvutQoF47sBoHKIsZi
+C8AAmwW1rqP8iEsyCnrneaU224CZsKDk
+=Ltsi
 -----END PGP SIGNATURE-----
